[gd_scene load_steps=16 format=2]

[ext_resource path="res://assets/board.png" type="Texture" id=1]
[ext_resource path="res://assets/Player2.png" type="Texture" id=2]
[ext_resource path="res://assets/Player1.png" type="Texture" id=3]
[ext_resource path="res://scenes/game.gd" type="Script" id=4]
[ext_resource path="res://scenes/bouncing_dice.tscn" type="PackedScene" id=5]
[ext_resource path="res://shaders/wiggle.tres" type="Material" id=6]
[ext_resource path="res://assets/bg.PNG" type="Texture" id=7]
[ext_resource path="res://assets/blue_big.PNG" type="Texture" id=8]
[ext_resource path="res://assets/yellow_big.PNG" type="Texture" id=9]
[ext_resource path="res://assets/shadow.PNG" type="Texture" id=10]
[ext_resource path="res://assets/blue_arow.PNG" type="Texture" id=11]
[ext_resource path="res://assets/yellow_arrow.PNG" type="Texture" id=12]
[ext_resource path="res://assets/blueWIn Merged.PNG" type="Texture" id=13]
[ext_resource path="res://assets/yellowWin Merged.PNG" type="Texture" id=14]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 14 ) ],
"loop": true,
"name": "False",
"speed": 5.0
}, {
"frames": [ ExtResource( 13 ) ],
"loop": true,
"name": "True",
"speed": 5.0
} ]

[node name="game" type="Node2D"]
script = ExtResource( 4 )

[node name="Bg" type="Sprite" parent="."]
position = Vector2( 938, 492 )
scale = Vector2( 2, 1 )
texture = ExtResource( 7 )

[node name="Shadow" type="Sprite" parent="."]
self_modulate = Color( 1, 1, 1, 0.686275 )
material = ExtResource( 6 )
position = Vector2( 1404, 940 )
texture = ExtResource( 10 )

[node name="BlueBig" type="Sprite" parent="."]
self_modulate = Color( 1, 1, 1, 0.686275 )
material = ExtResource( 6 )
position = Vector2( 1596, 572 )
z_index = 1
texture = ExtResource( 8 )

[node name="YellowBig" type="Sprite" parent="."]
self_modulate = Color( 1, 1, 1, 0.686275 )
material = ExtResource( 6 )
position = Vector2( 1258, 518 )
z_index = 1
texture = ExtResource( 9 )

[node name="Board" type="Sprite" parent="."]
position = Vector2( 511, 506 )
texture = ExtResource( 1 )

[node name="Portals" type="Node2D" parent="."]

[node name="Positions" type="Node" parent="."]

[node name="1" type="Position2D" parent="Positions"]
position = Vector2( 55, 955 )

[node name="2" type="Position2D" parent="Positions"]
position = Vector2( 155, 955 )

[node name="3" type="Position2D" parent="Positions"]
position = Vector2( 255, 955 )

[node name="4" type="Position2D" parent="Positions"]
position = Vector2( 355, 955 )

[node name="5" type="Position2D" parent="Positions"]
position = Vector2( 455, 955 )

[node name="6" type="Position2D" parent="Positions"]
position = Vector2( 555, 955 )

[node name="7" type="Position2D" parent="Positions"]
position = Vector2( 655, 955 )

[node name="8" type="Position2D" parent="Positions"]
position = Vector2( 755, 955 )

[node name="9" type="Position2D" parent="Positions"]
position = Vector2( 855, 955 )

[node name="10" type="Position2D" parent="Positions"]
position = Vector2( 955, 955 )

[node name="11" type="Position2D" parent="Positions"]
position = Vector2( 955, 855 )

[node name="12" type="Position2D" parent="Positions"]
position = Vector2( 855, 855 )

[node name="13" type="Position2D" parent="Positions"]
position = Vector2( 755, 855 )

[node name="14" type="Position2D" parent="Positions"]
position = Vector2( 655, 855 )

[node name="15" type="Position2D" parent="Positions"]
position = Vector2( 555, 855 )

[node name="16" type="Position2D" parent="Positions"]
position = Vector2( 455, 855 )

[node name="17" type="Position2D" parent="Positions"]
position = Vector2( 355, 855 )

[node name="18" type="Position2D" parent="Positions"]
position = Vector2( 255, 855 )

[node name="19" type="Position2D" parent="Positions"]
position = Vector2( 155, 855 )

[node name="20" type="Position2D" parent="Positions"]
position = Vector2( 55, 855 )

[node name="21" type="Position2D" parent="Positions"]
position = Vector2( 55, 755 )

[node name="22" type="Position2D" parent="Positions"]
position = Vector2( 155, 755 )

[node name="23" type="Position2D" parent="Positions"]
position = Vector2( 255, 755 )

[node name="24" type="Position2D" parent="Positions"]
position = Vector2( 355, 755 )

[node name="25" type="Position2D" parent="Positions"]
position = Vector2( 455, 755 )

[node name="26" type="Position2D" parent="Positions"]
position = Vector2( 555, 755 )

[node name="27" type="Position2D" parent="Positions"]
position = Vector2( 655, 755 )

[node name="28" type="Position2D" parent="Positions"]
position = Vector2( 755, 755 )

[node name="29" type="Position2D" parent="Positions"]
position = Vector2( 855, 755 )

[node name="30" type="Position2D" parent="Positions"]
position = Vector2( 955, 755 )

[node name="31" type="Position2D" parent="Positions"]
position = Vector2( 955, 655 )

[node name="32" type="Position2D" parent="Positions"]
position = Vector2( 855, 655 )

[node name="33" type="Position2D" parent="Positions"]
position = Vector2( 755, 655 )

[node name="34" type="Position2D" parent="Positions"]
position = Vector2( 655, 655 )

[node name="35" type="Position2D" parent="Positions"]
position = Vector2( 555, 655 )

[node name="36" type="Position2D" parent="Positions"]
position = Vector2( 455, 655 )

[node name="37" type="Position2D" parent="Positions"]
position = Vector2( 355, 655 )

[node name="38" type="Position2D" parent="Positions"]
position = Vector2( 255, 655 )

[node name="39" type="Position2D" parent="Positions"]
position = Vector2( 155, 655 )

[node name="40" type="Position2D" parent="Positions"]
position = Vector2( 55, 655 )

[node name="41" type="Position2D" parent="Positions"]
position = Vector2( 55, 555 )

[node name="42" type="Position2D" parent="Positions"]
position = Vector2( 155, 555 )

[node name="43" type="Position2D" parent="Positions"]
position = Vector2( 255, 555 )

[node name="44" type="Position2D" parent="Positions"]
position = Vector2( 355, 555 )

[node name="45" type="Position2D" parent="Positions"]
position = Vector2( 455, 555 )

[node name="46" type="Position2D" parent="Positions"]
position = Vector2( 555, 555 )

[node name="47" type="Position2D" parent="Positions"]
position = Vector2( 655, 555 )

[node name="48" type="Position2D" parent="Positions"]
position = Vector2( 755, 555 )

[node name="49" type="Position2D" parent="Positions"]
position = Vector2( 855, 555 )

[node name="50" type="Position2D" parent="Positions"]
position = Vector2( 955, 555 )

[node name="51" type="Position2D" parent="Positions"]
position = Vector2( 955, 455 )

[node name="52" type="Position2D" parent="Positions"]
position = Vector2( 855, 455 )

[node name="53" type="Position2D" parent="Positions"]
position = Vector2( 755, 455 )

[node name="54" type="Position2D" parent="Positions"]
position = Vector2( 655, 455 )

[node name="55" type="Position2D" parent="Positions"]
position = Vector2( 555, 455 )

[node name="56" type="Position2D" parent="Positions"]
position = Vector2( 455, 455 )

[node name="57" type="Position2D" parent="Positions"]
position = Vector2( 355, 455 )

[node name="58" type="Position2D" parent="Positions"]
position = Vector2( 255, 455 )

[node name="59" type="Position2D" parent="Positions"]
position = Vector2( 155, 455 )

[node name="60" type="Position2D" parent="Positions"]
position = Vector2( 55, 455 )

[node name="61" type="Position2D" parent="Positions"]
position = Vector2( 55, 355 )

[node name="62" type="Position2D" parent="Positions"]
position = Vector2( 155, 355 )

[node name="63" type="Position2D" parent="Positions"]
position = Vector2( 255, 355 )

[node name="64" type="Position2D" parent="Positions"]
position = Vector2( 355, 355 )

[node name="65" type="Position2D" parent="Positions"]
position = Vector2( 455, 355 )

[node name="66" type="Position2D" parent="Positions"]
position = Vector2( 555, 355 )

[node name="67" type="Position2D" parent="Positions"]
position = Vector2( 655, 355 )

[node name="68" type="Position2D" parent="Positions"]
position = Vector2( 755, 355 )

[node name="69" type="Position2D" parent="Positions"]
position = Vector2( 855, 355 )

[node name="70" type="Position2D" parent="Positions"]
position = Vector2( 955, 355 )

[node name="71" type="Position2D" parent="Positions"]
position = Vector2( 955, 255 )

[node name="72" type="Position2D" parent="Positions"]
position = Vector2( 855, 255 )

[node name="73" type="Position2D" parent="Positions"]
position = Vector2( 755, 255 )

[node name="74" type="Position2D" parent="Positions"]
position = Vector2( 655, 255 )

[node name="75" type="Position2D" parent="Positions"]
position = Vector2( 555, 255 )

[node name="76" type="Position2D" parent="Positions"]
position = Vector2( 455, 255 )

[node name="77" type="Position2D" parent="Positions"]
position = Vector2( 355, 255 )

[node name="78" type="Position2D" parent="Positions"]
position = Vector2( 255, 255 )

[node name="79" type="Position2D" parent="Positions"]
position = Vector2( 155, 255 )

[node name="80" type="Position2D" parent="Positions"]
position = Vector2( 55, 255 )

[node name="81" type="Position2D" parent="Positions"]
position = Vector2( 55, 155 )

[node name="82" type="Position2D" parent="Positions"]
position = Vector2( 155, 155 )

[node name="83" type="Position2D" parent="Positions"]
position = Vector2( 255, 155 )

[node name="84" type="Position2D" parent="Positions"]
position = Vector2( 355, 155 )

[node name="85" type="Position2D" parent="Positions"]
position = Vector2( 455, 155 )

[node name="86" type="Position2D" parent="Positions"]
position = Vector2( 555, 155 )

[node name="87" type="Position2D" parent="Positions"]
position = Vector2( 655, 155 )

[node name="88" type="Position2D" parent="Positions"]
position = Vector2( 755, 155 )

[node name="89" type="Position2D" parent="Positions"]
position = Vector2( 855, 155 )

[node name="90" type="Position2D" parent="Positions"]
position = Vector2( 955, 155 )

[node name="91" type="Position2D" parent="Positions"]
position = Vector2( 955, 55 )

[node name="92" type="Position2D" parent="Positions"]
position = Vector2( 855, 55 )

[node name="93" type="Position2D" parent="Positions"]
position = Vector2( 755, 55 )

[node name="94" type="Position2D" parent="Positions"]
position = Vector2( 655, 55 )

[node name="95" type="Position2D" parent="Positions"]
position = Vector2( 555, 55 )

[node name="96" type="Position2D" parent="Positions"]
position = Vector2( 455, 55 )

[node name="97" type="Position2D" parent="Positions"]
position = Vector2( 355, 55 )

[node name="98" type="Position2D" parent="Positions"]
position = Vector2( 255, 55 )

[node name="99" type="Position2D" parent="Positions"]
position = Vector2( 155, 55 )

[node name="100" type="Position2D" parent="Positions"]
position = Vector2( 55, 55 )

[node name="bouncing_dice" parent="." instance=ExtResource( 5 )]
position = Vector2( 371, 447 )

[node name="YSort" type="YSort" parent="."]

[node name="Player2" type="Sprite" parent="YSort"]
material = ExtResource( 6 )
position = Vector2( -184, 742 )
z_index = 1
texture = ExtResource( 2 )
offset = Vector2( 0, -70 )

[node name="Arrow" type="Sprite" parent="YSort/Player2"]
visible = false
position = Vector2( 9, -211 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 12 )

[node name="Player1" type="Sprite" parent="YSort"]
material = ExtResource( 6 )
position = Vector2( -205, 1005 )
z_index = 1
texture = ExtResource( 3 )
offset = Vector2( 0, -50 )

[node name="Arrow" type="Sprite" parent="YSort/Player1"]
visible = false
position = Vector2( -6, -184 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 11 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PoolVector2Array( 1003, 4, 2, 1, -29, -25, 1044, -26, 1037, 1033, -19, 1038, -29, -25, 5, 3, 4, 1004, 1003, 1002 )

[node name="Numbers" type="Node2D" parent="."]

[node name="Victory" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 500, 500 )
frames = SubResource( 1 )
animation = "False"
